// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrintQueueScreen Test rendering items in printQueue Edit PrintQueue Modal should be visible 1`] = `
<RCTSafeAreaView
  style={
    {
      "flex": 1,
    }
  }
>
  <CustomModalComponent
    animationType="none"
    isVisible={true}
    modalType="Form"
    onClose={[Function]}
  >
    <PrintQueueEdit
      countryCode="CN"
      itemIndexToEdit={0}
      printQueue={
        [
          {
            "catgNbr": 2,
            "itemName": "Test item",
            "itemNbr": 123456,
            "paperSize": "Small",
            "signQty": 1,
            "upcNbr": "123456",
            "worklistType": "NSFL",
          },
        ]
      }
      queueName="PRICESIGN"
      selectedPrinter={
        {
          "desc": "Default",
          "id": "000000000000",
          "labelsAvailable": [
            "price",
          ],
          "name": "Front Desk Printer",
          "type": 0,
        }
      }
      setItemIndexToEdit={[MockFunction]}
    />
  </CustomModalComponent>
  <ScrollView
    contentContainerStyle={
      {
        "alignItems": "stretch",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        {
          "marginHorizontal": 18,
          "marginVertical": 8,
        }
      }
    >
      <Text>
        1 [missing "en.PRINT.TOTAL_ITEMS" translation]
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "#ffffffff",
          "borderBottomColor": "#9e9e9e",
          "borderBottomWidth": 1,
          "paddingHorizontal": 10,
        }
      }
    >
      <View
        style={
          [
            {
              "flexDirection": "row",
              "paddingBottom": 6,
              "paddingTop": 12,
            },
            {},
          ]
        }
      >
        <View
          style={
            {
              "flex": 1,
              "paddingLeft": 8,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 16,
                "paddingBottom": 8,
                "paddingRight": 14,
              }
            }
          >
            Test item
          </Text>
          <Text
            style={
              {
                "color": "#616161",
                "paddingTop": 4,
              }
            }
          >
            [missing "en.PRINT.SIGN_SIZE" translation]: [missing "en.PRINT.Small" translation]
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#616161",
                  "flex": 3,
                }
              }
            >
              [missing "en.PRINT.COPIES" translation]: 1
            </Text>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <IconButton
                backgroundColor="#0071e9"
                disabled={false}
                height={45}
                icon={
                  <mockConstructor
                    color="#616161"
                    name="pencil"
                    size={22}
                  />
                }
                onPress={[Function]}
                radius={5}
                style={{}}
                type={3}
                width={-1}
              />
              <IconButton
                backgroundColor="#0071e9"
                disabled={false}
                height={45}
                icon={
                  <mockConstructor
                    color="#616161"
                    name="delete"
                    size={22}
                  />
                }
                onPress={[Function]}
                radius={5}
                style={{}}
                type={3}
                width={-1}
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </ScrollView>
  <View
    style={
      {
        "backgroundColor": "#ffffffff",
        "elevation": 16,
        "flexDirection": "row",
        "justifyContent": "space-around",
        "paddingBottom": 20,
        "paddingHorizontal": 4,
        "paddingTop": 8,
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={false}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        {
          "flex": 1,
          "paddingHorizontal": 6,
        }
      }
      title="[missing "en.PRINT.PRINT_ALL" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
</RCTSafeAreaView>
`;

exports[`PrintQueueScreen Test rendering items in printQueue Renders Empty Print list for Zero Items in queue 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "flex-start",
      "paddingVertical": 28,
    }
  }
>
  <IconButton
    backgroundColor="#eeeeee"
    disabled={true}
    height={250}
    icon={
      <mockConstructor
        color="#9e9e9e"
        name="printer"
        size={100}
      />
    }
    radius={250}
    style={{}}
    type={1}
    width={250}
  />
  <Text
    style={
      {
        "color": "#616161",
        "marginVertical": 16,
      }
    }
  >
    [missing "en.PRINT.EMPTY_LIST" translation]
  </Text>
</View>
`;

exports[`PrintQueueScreen Test rendering items in printQueue Renders a single item for renderPrintItem 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "paddingBottom": 6,
        "paddingTop": 12,
      },
      {},
    ]
  }
>
  <View
    style={
      {
        "flex": 1,
        "paddingLeft": 8,
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 16,
          "paddingBottom": 8,
          "paddingRight": 14,
        }
      }
    >
      Test item
    </Text>
    <Text
      style={
        {
          "color": "#616161",
          "paddingTop": 4,
        }
      }
    >
      [missing "en.PRINT.SIGN_SIZE" translation]: [missing "en.PRINT.Small" translation]
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        style={
          {
            "color": "#616161",
            "flex": 3,
          }
        }
      >
        [missing "en.PRINT.COPIES" translation]: 1
      </Text>
      <View
        style={
          {
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <IconButton
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          icon={
            <mockConstructor
              color="#616161"
              name="pencil"
              size={22}
            />
          }
          onPress={[Function]}
          radius={5}
          style={{}}
          type={3}
          width={-1}
        />
        <IconButton
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          icon={
            <mockConstructor
              color="#616161"
              name="delete"
              size={22}
            />
          }
          onPress={[Function]}
          radius={5}
          style={{}}
          type={3}
          width={-1}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`PrintQueueScreen Test rendering items in printQueue Renders the print queue with 10 items in it 1`] = `
<RCTSafeAreaView
  style={
    {
      "flex": 1,
    }
  }
>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Form"
    onClose={[Function]}
  >
    <PrintQueueEdit
      countryCode="CN"
      itemIndexToEdit={-1}
      printQueue={
        [
          {
            "catgNbr": 2,
            "itemName": "Test item",
            "itemNbr": 123456,
            "paperSize": "XSmall",
            "signQty": 1,
            "upcNbr": "123456",
            "worklistType": "NSFL",
          },
          {
            "catgNbr": 2,
            "itemName": "Test item",
            "itemNbr": 123456,
            "paperSize": "Small",
            "signQty": 1,
            "upcNbr": "123456",
            "worklistType": "NSFL",
          },
          {
            "catgNbr": 2,
            "itemName": "Test item",
            "itemNbr": 123456,
            "paperSize": "Medium",
            "signQty": 1,
            "upcNbr": "123456",
            "worklistType": "NSFL",
          },
          {
            "catgNbr": 2,
            "itemName": "Test item",
            "itemNbr": 123456,
            "paperSize": "Large",
            "signQty": 1,
            "upcNbr": "123456",
            "worklistType": "NSFL",
          },
          {
            "catgNbr": 2,
            "itemName": "Test item",
            "itemNbr": 123456,
            "paperSize": "Wine",
            "signQty": 1,
            "upcNbr": "123456",
            "worklistType": "NSFL",
          },
          {
            "catgNbr": 2,
            "itemName": "Store Use Item",
            "itemNbr": 789012,
            "paperSize": "XSmall",
            "signQty": 1,
            "upcNbr": "789012",
            "worklistType": "NSFL",
          },
          {
            "catgNbr": 2,
            "itemName": "Store Use Item",
            "itemNbr": 789012,
            "paperSize": "Small",
            "signQty": 1,
            "upcNbr": "789012",
            "worklistType": "NSFL",
          },
          {
            "catgNbr": 2,
            "itemName": "Store Use Item",
            "itemNbr": 789012,
            "paperSize": "Medium",
            "signQty": 1,
            "upcNbr": "789012",
            "worklistType": "NSFL",
          },
          {
            "catgNbr": 2,
            "itemName": "Store Use Item",
            "itemNbr": 789012,
            "paperSize": "Large",
            "signQty": 1,
            "upcNbr": "789012",
            "worklistType": "NSFL",
          },
          {
            "catgNbr": 2,
            "itemName": "Store Use Item",
            "itemNbr": 789012,
            "paperSize": "Wine",
            "signQty": 1,
            "upcNbr": "789012",
            "worklistType": "NSFL",
          },
        ]
      }
      queueName="PRICESIGN"
      selectedPrinter={
        {
          "desc": "Default",
          "id": "000000000000",
          "labelsAvailable": [
            "price",
          ],
          "name": "Front Desk Printer",
          "type": 0,
        }
      }
      setItemIndexToEdit={[MockFunction]}
    />
  </CustomModalComponent>
  <ScrollView
    contentContainerStyle={
      {
        "alignItems": "stretch",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        {
          "marginHorizontal": 18,
          "marginVertical": 8,
        }
      }
    >
      <Text>
        10 [missing "en.PRINT.TOTAL_ITEMS" translation]
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "#ffffffff",
          "borderBottomColor": "#9e9e9e",
          "borderBottomWidth": 1,
          "paddingHorizontal": 10,
        }
      }
    >
      <View
        style={
          [
            {
              "flexDirection": "row",
              "paddingBottom": 6,
              "paddingTop": 12,
            },
            {
              "borderBottomColor": "#e0e0e0",
              "borderBottomWidth": 1,
            },
          ]
        }
      >
        <View
          style={
            {
              "flex": 1,
              "paddingLeft": 8,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 16,
                "paddingBottom": 8,
                "paddingRight": 14,
              }
            }
          >
            Test item
          </Text>
          <Text
            style={
              {
                "color": "#616161",
                "paddingTop": 4,
              }
            }
          >
            [missing "en.PRINT.SIGN_SIZE" translation]: [missing "en.PRINT.XSmall" translation]
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#616161",
                  "flex": 3,
                }
              }
            >
              [missing "en.PRINT.COPIES" translation]: 1
            </Text>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <IconButton
                backgroundColor="#0071e9"
                disabled={false}
                height={45}
                icon={
                  <mockConstructor
                    color="#616161"
                    name="pencil"
                    size={22}
                  />
                }
                onPress={[Function]}
                radius={5}
                style={{}}
                type={3}
                width={-1}
              />
              <IconButton
                backgroundColor="#0071e9"
                disabled={false}
                height={45}
                icon={
                  <mockConstructor
                    color="#616161"
                    name="delete"
                    size={22}
                  />
                }
                onPress={[Function]}
                radius={5}
                style={{}}
                type={3}
                width={-1}
              />
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexDirection": "row",
              "paddingBottom": 6,
              "paddingTop": 12,
            },
            {
              "borderBottomColor": "#e0e0e0",
              "borderBottomWidth": 1,
            },
          ]
        }
      >
        <View
          style={
            {
              "flex": 1,
              "paddingLeft": 8,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 16,
                "paddingBottom": 8,
                "paddingRight": 14,
              }
            }
          >
            Test item
          </Text>
          <Text
            style={
              {
                "color": "#616161",
                "paddingTop": 4,
              }
            }
          >
            [missing "en.PRINT.SIGN_SIZE" translation]: [missing "en.PRINT.Small" translation]
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#616161",
                  "flex": 3,
                }
              }
            >
              [missing "en.PRINT.COPIES" translation]: 1
            </Text>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <IconButton
                backgroundColor="#0071e9"
                disabled={false}
                height={45}
                icon={
                  <mockConstructor
                    color="#616161"
                    name="pencil"
                    size={22}
                  />
                }
                onPress={[Function]}
                radius={5}
                style={{}}
                type={3}
                width={-1}
              />
              <IconButton
                backgroundColor="#0071e9"
                disabled={false}
                height={45}
                icon={
                  <mockConstructor
                    color="#616161"
                    name="delete"
                    size={22}
                  />
                }
                onPress={[Function]}
                radius={5}
                style={{}}
                type={3}
                width={-1}
              />
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexDirection": "row",
              "paddingBottom": 6,
              "paddingTop": 12,
            },
            {
              "borderBottomColor": "#e0e0e0",
              "borderBottomWidth": 1,
            },
          ]
        }
      >
        <View
          style={
            {
              "flex": 1,
              "paddingLeft": 8,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 16,
                "paddingBottom": 8,
                "paddingRight": 14,
              }
            }
          >
            Test item
          </Text>
          <Text
            style={
              {
                "color": "#616161",
                "paddingTop": 4,
              }
            }
          >
            [missing "en.PRINT.SIGN_SIZE" translation]: [missing "en.PRINT.Medium" translation]
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#616161",
                  "flex": 3,
                }
              }
            >
              [missing "en.PRINT.COPIES" translation]: 1
            </Text>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <IconButton
                backgroundColor="#0071e9"
                disabled={false}
                height={45}
                icon={
                  <mockConstructor
                    color="#616161"
                    name="pencil"
                    size={22}
                  />
                }
                onPress={[Function]}
                radius={5}
                style={{}}
                type={3}
                width={-1}
              />
              <IconButton
                backgroundColor="#0071e9"
                disabled={false}
                height={45}
                icon={
                  <mockConstructor
                    color="#616161"
                    name="delete"
                    size={22}
                  />
                }
                onPress={[Function]}
                radius={5}
                style={{}}
                type={3}
                width={-1}
              />
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexDirection": "row",
              "paddingBottom": 6,
              "paddingTop": 12,
            },
            {
              "borderBottomColor": "#e0e0e0",
              "borderBottomWidth": 1,
            },
          ]
        }
      >
        <View
          style={
            {
              "flex": 1,
              "paddingLeft": 8,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 16,
                "paddingBottom": 8,
                "paddingRight": 14,
              }
            }
          >
            Test item
          </Text>
          <Text
            style={
              {
                "color": "#616161",
                "paddingTop": 4,
              }
            }
          >
            [missing "en.PRINT.SIGN_SIZE" translation]: [missing "en.PRINT.Large" translation]
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#616161",
                  "flex": 3,
                }
              }
            >
              [missing "en.PRINT.COPIES" translation]: 1
            </Text>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <IconButton
                backgroundColor="#0071e9"
                disabled={false}
                height={45}
                icon={
                  <mockConstructor
                    color="#616161"
                    name="pencil"
                    size={22}
                  />
                }
                onPress={[Function]}
                radius={5}
                style={{}}
                type={3}
                width={-1}
              />
              <IconButton
                backgroundColor="#0071e9"
                disabled={false}
                height={45}
                icon={
                  <mockConstructor
                    color="#616161"
                    name="delete"
                    size={22}
                  />
                }
                onPress={[Function]}
                radius={5}
                style={{}}
                type={3}
                width={-1}
              />
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexDirection": "row",
              "paddingBottom": 6,
              "paddingTop": 12,
            },
            {
              "borderBottomColor": "#e0e0e0",
              "borderBottomWidth": 1,
            },
          ]
        }
      >
        <View
          style={
            {
              "flex": 1,
              "paddingLeft": 8,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 16,
                "paddingBottom": 8,
                "paddingRight": 14,
              }
            }
          >
            Test item
          </Text>
          <Text
            style={
              {
                "color": "#616161",
                "paddingTop": 4,
              }
            }
          >
            [missing "en.PRINT.SIGN_SIZE" translation]: [missing "en.PRINT.Wine" translation]
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#616161",
                  "flex": 3,
                }
              }
            >
              [missing "en.PRINT.COPIES" translation]: 1
            </Text>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <IconButton
                backgroundColor="#0071e9"
                disabled={false}
                height={45}
                icon={
                  <mockConstructor
                    color="#616161"
                    name="pencil"
                    size={22}
                  />
                }
                onPress={[Function]}
                radius={5}
                style={{}}
                type={3}
                width={-1}
              />
              <IconButton
                backgroundColor="#0071e9"
                disabled={false}
                height={45}
                icon={
                  <mockConstructor
                    color="#616161"
                    name="delete"
                    size={22}
                  />
                }
                onPress={[Function]}
                radius={5}
                style={{}}
                type={3}
                width={-1}
              />
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexDirection": "row",
              "paddingBottom": 6,
              "paddingTop": 12,
            },
            {
              "borderBottomColor": "#e0e0e0",
              "borderBottomWidth": 1,
            },
          ]
        }
      >
        <View
          style={
            {
              "flex": 1,
              "paddingLeft": 8,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 16,
                "paddingBottom": 8,
                "paddingRight": 14,
              }
            }
          >
            Store Use Item
          </Text>
          <Text
            style={
              {
                "color": "#616161",
                "paddingTop": 4,
              }
            }
          >
            [missing "en.PRINT.SIGN_SIZE" translation]: [missing "en.PRINT.XSmall" translation]
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#616161",
                  "flex": 3,
                }
              }
            >
              [missing "en.PRINT.COPIES" translation]: 1
            </Text>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <IconButton
                backgroundColor="#0071e9"
                disabled={false}
                height={45}
                icon={
                  <mockConstructor
                    color="#616161"
                    name="pencil"
                    size={22}
                  />
                }
                onPress={[Function]}
                radius={5}
                style={{}}
                type={3}
                width={-1}
              />
              <IconButton
                backgroundColor="#0071e9"
                disabled={false}
                height={45}
                icon={
                  <mockConstructor
                    color="#616161"
                    name="delete"
                    size={22}
                  />
                }
                onPress={[Function]}
                radius={5}
                style={{}}
                type={3}
                width={-1}
              />
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexDirection": "row",
              "paddingBottom": 6,
              "paddingTop": 12,
            },
            {
              "borderBottomColor": "#e0e0e0",
              "borderBottomWidth": 1,
            },
          ]
        }
      >
        <View
          style={
            {
              "flex": 1,
              "paddingLeft": 8,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 16,
                "paddingBottom": 8,
                "paddingRight": 14,
              }
            }
          >
            Store Use Item
          </Text>
          <Text
            style={
              {
                "color": "#616161",
                "paddingTop": 4,
              }
            }
          >
            [missing "en.PRINT.SIGN_SIZE" translation]: [missing "en.PRINT.Small" translation]
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#616161",
                  "flex": 3,
                }
              }
            >
              [missing "en.PRINT.COPIES" translation]: 1
            </Text>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <IconButton
                backgroundColor="#0071e9"
                disabled={false}
                height={45}
                icon={
                  <mockConstructor
                    color="#616161"
                    name="pencil"
                    size={22}
                  />
                }
                onPress={[Function]}
                radius={5}
                style={{}}
                type={3}
                width={-1}
              />
              <IconButton
                backgroundColor="#0071e9"
                disabled={false}
                height={45}
                icon={
                  <mockConstructor
                    color="#616161"
                    name="delete"
                    size={22}
                  />
                }
                onPress={[Function]}
                radius={5}
                style={{}}
                type={3}
                width={-1}
              />
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexDirection": "row",
              "paddingBottom": 6,
              "paddingTop": 12,
            },
            {
              "borderBottomColor": "#e0e0e0",
              "borderBottomWidth": 1,
            },
          ]
        }
      >
        <View
          style={
            {
              "flex": 1,
              "paddingLeft": 8,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 16,
                "paddingBottom": 8,
                "paddingRight": 14,
              }
            }
          >
            Store Use Item
          </Text>
          <Text
            style={
              {
                "color": "#616161",
                "paddingTop": 4,
              }
            }
          >
            [missing "en.PRINT.SIGN_SIZE" translation]: [missing "en.PRINT.Medium" translation]
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#616161",
                  "flex": 3,
                }
              }
            >
              [missing "en.PRINT.COPIES" translation]: 1
            </Text>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <IconButton
                backgroundColor="#0071e9"
                disabled={false}
                height={45}
                icon={
                  <mockConstructor
                    color="#616161"
                    name="pencil"
                    size={22}
                  />
                }
                onPress={[Function]}
                radius={5}
                style={{}}
                type={3}
                width={-1}
              />
              <IconButton
                backgroundColor="#0071e9"
                disabled={false}
                height={45}
                icon={
                  <mockConstructor
                    color="#616161"
                    name="delete"
                    size={22}
                  />
                }
                onPress={[Function]}
                radius={5}
                style={{}}
                type={3}
                width={-1}
              />
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexDirection": "row",
              "paddingBottom": 6,
              "paddingTop": 12,
            },
            {
              "borderBottomColor": "#e0e0e0",
              "borderBottomWidth": 1,
            },
          ]
        }
      >
        <View
          style={
            {
              "flex": 1,
              "paddingLeft": 8,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 16,
                "paddingBottom": 8,
                "paddingRight": 14,
              }
            }
          >
            Store Use Item
          </Text>
          <Text
            style={
              {
                "color": "#616161",
                "paddingTop": 4,
              }
            }
          >
            [missing "en.PRINT.SIGN_SIZE" translation]: [missing "en.PRINT.Large" translation]
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#616161",
                  "flex": 3,
                }
              }
            >
              [missing "en.PRINT.COPIES" translation]: 1
            </Text>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <IconButton
                backgroundColor="#0071e9"
                disabled={false}
                height={45}
                icon={
                  <mockConstructor
                    color="#616161"
                    name="pencil"
                    size={22}
                  />
                }
                onPress={[Function]}
                radius={5}
                style={{}}
                type={3}
                width={-1}
              />
              <IconButton
                backgroundColor="#0071e9"
                disabled={false}
                height={45}
                icon={
                  <mockConstructor
                    color="#616161"
                    name="delete"
                    size={22}
                  />
                }
                onPress={[Function]}
                radius={5}
                style={{}}
                type={3}
                width={-1}
              />
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexDirection": "row",
              "paddingBottom": 6,
              "paddingTop": 12,
            },
            {},
          ]
        }
      >
        <View
          style={
            {
              "flex": 1,
              "paddingLeft": 8,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 16,
                "paddingBottom": 8,
                "paddingRight": 14,
              }
            }
          >
            Store Use Item
          </Text>
          <Text
            style={
              {
                "color": "#616161",
                "paddingTop": 4,
              }
            }
          >
            [missing "en.PRINT.SIGN_SIZE" translation]: [missing "en.PRINT.Wine" translation]
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#616161",
                  "flex": 3,
                }
              }
            >
              [missing "en.PRINT.COPIES" translation]: 1
            </Text>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <IconButton
                backgroundColor="#0071e9"
                disabled={false}
                height={45}
                icon={
                  <mockConstructor
                    color="#616161"
                    name="pencil"
                    size={22}
                  />
                }
                onPress={[Function]}
                radius={5}
                style={{}}
                type={3}
                width={-1}
              />
              <IconButton
                backgroundColor="#0071e9"
                disabled={false}
                height={45}
                icon={
                  <mockConstructor
                    color="#616161"
                    name="delete"
                    size={22}
                  />
                }
                onPress={[Function]}
                radius={5}
                style={{}}
                type={3}
                width={-1}
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </ScrollView>
  <View
    style={
      {
        "backgroundColor": "#ffffffff",
        "elevation": 16,
        "flexDirection": "row",
        "justifyContent": "space-around",
        "paddingBottom": 20,
        "paddingHorizontal": 4,
        "paddingTop": 8,
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={false}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        {
          "flex": 1,
          "paddingHorizontal": 6,
        }
      }
      title="[missing "en.PRINT.PRINT_ALL" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
</RCTSafeAreaView>
`;

exports[`PrintQueueScreen Tests rendering printQueue api response Renders Print service error  1`] = `
<RCTSafeAreaView
  style={
    {
      "flex": 1,
    }
  }
>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Form"
    onClose={[Function]}
  >
    <PrintQueueEdit
      countryCode="CN"
      itemIndexToEdit={-1}
      printQueue={
        [
          {
            "catgNbr": 2,
            "itemName": "Test item",
            "itemNbr": 123456,
            "paperSize": "Small",
            "signQty": 1,
            "upcNbr": "123456",
            "worklistType": "NSFL",
          },
        ]
      }
      queueName="PRICESIGN"
      selectedPrinter={
        {
          "desc": "Default",
          "id": "000000000000",
          "labelsAvailable": [
            "price",
          ],
          "name": "Front Desk Printer",
          "type": 0,
        }
      }
      setItemIndexToEdit={[MockFunction]}
    />
  </CustomModalComponent>
  <ScrollView
    contentContainerStyle={
      {
        "alignItems": "stretch",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        {
          "marginHorizontal": 18,
          "marginVertical": 8,
        }
      }
    >
      <Text>
        1 [missing "en.PRINT.TOTAL_ITEMS" translation]
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "#ffffffff",
          "borderBottomColor": "#9e9e9e",
          "borderBottomWidth": 1,
          "paddingHorizontal": 10,
        }
      }
    >
      <View
        style={
          [
            {
              "flexDirection": "row",
              "paddingBottom": 6,
              "paddingTop": 12,
            },
            {},
          ]
        }
      >
        <View
          style={
            {
              "flex": 1,
              "paddingLeft": 8,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 16,
                "paddingBottom": 8,
                "paddingRight": 14,
              }
            }
          >
            Test item
          </Text>
          <Text
            style={
              {
                "color": "#616161",
                "paddingTop": 4,
              }
            }
          >
            [missing "en.PRINT.SIGN_SIZE" translation]: [missing "en.PRINT.Small" translation]
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#616161",
                  "flex": 3,
                }
              }
            >
              [missing "en.PRINT.COPIES" translation]: 1
            </Text>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <IconButton
                backgroundColor="#0071e9"
                disabled={false}
                height={45}
                icon={
                  <mockConstructor
                    color="#616161"
                    name="pencil"
                    size={22}
                  />
                }
                onPress={[Function]}
                radius={5}
                style={{}}
                type={3}
                width={-1}
              />
              <IconButton
                backgroundColor="#0071e9"
                disabled={false}
                height={45}
                icon={
                  <mockConstructor
                    color="#616161"
                    name="delete"
                    size={22}
                  />
                }
                onPress={[Function]}
                radius={5}
                style={{}}
                type={3}
                width={-1}
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignContent": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginTop": 20,
          "paddingLeft": 10,
        }
      }
    >
      <mockConstructor
        color="#e57373"
        name="alert"
        size={40}
      />
      <Text
        style={
          {
            "color": "#ec0439",
            "fontSize": 16,
          }
        }
      >
        [missing "en.PRINT.PRINT_SERVICE_ERROR" translation]
      </Text>
    </View>
  </ScrollView>
  <View
    style={
      {
        "backgroundColor": "#ffffffff",
        "elevation": 16,
        "flexDirection": "row",
        "justifyContent": "space-around",
        "paddingBottom": 20,
        "paddingHorizontal": 4,
        "paddingTop": 8,
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={false}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        {
          "flex": 1,
          "paddingHorizontal": 6,
        }
      }
      title="[missing "en.PRINT.PRINT_ALL" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
</RCTSafeAreaView>
`;

exports[`PrintQueueScreen Tests rendering printQueue api response Renders loader waiting for printApi response  1`] = `
<RCTSafeAreaView
  style={
    {
      "flex": 1,
    }
  }
>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Form"
    onClose={[Function]}
  >
    <PrintQueueEdit
      countryCode="CN"
      itemIndexToEdit={-1}
      printQueue={
        [
          {
            "catgNbr": 2,
            "itemName": "Test item",
            "itemNbr": 123456,
            "paperSize": "Small",
            "signQty": 1,
            "upcNbr": "123456",
            "worklistType": "NSFL",
          },
        ]
      }
      queueName="PRICESIGN"
      selectedPrinter={
        {
          "desc": "Default",
          "id": "000000000000",
          "labelsAvailable": [
            "price",
          ],
          "name": "Front Desk Printer",
          "type": 0,
        }
      }
      setItemIndexToEdit={[MockFunction]}
    />
  </CustomModalComponent>
  <ScrollView
    contentContainerStyle={
      {
        "alignItems": "stretch",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        {
          "marginHorizontal": 18,
          "marginVertical": 8,
        }
      }
    >
      <Text>
        1 [missing "en.PRINT.TOTAL_ITEMS" translation]
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "#ffffffff",
          "borderBottomColor": "#9e9e9e",
          "borderBottomWidth": 1,
          "paddingHorizontal": 10,
        }
      }
    >
      <View
        style={
          [
            {
              "flexDirection": "row",
              "paddingBottom": 6,
              "paddingTop": 12,
            },
            {},
          ]
        }
      >
        <View
          style={
            {
              "flex": 1,
              "paddingLeft": 8,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 16,
                "paddingBottom": 8,
                "paddingRight": 14,
              }
            }
          >
            Test item
          </Text>
          <Text
            style={
              {
                "color": "#616161",
                "paddingTop": 4,
              }
            }
          >
            [missing "en.PRINT.SIGN_SIZE" translation]: [missing "en.PRINT.Small" translation]
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#616161",
                  "flex": 3,
                }
              }
            >
              [missing "en.PRINT.COPIES" translation]: 1
            </Text>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <IconButton
                backgroundColor="#0071e9"
                disabled={false}
                height={45}
                icon={
                  <mockConstructor
                    color="#616161"
                    name="pencil"
                    size={22}
                  />
                }
                onPress={[Function]}
                radius={5}
                style={{}}
                type={3}
                width={-1}
              />
              <IconButton
                backgroundColor="#0071e9"
                disabled={false}
                height={45}
                icon={
                  <mockConstructor
                    color="#616161"
                    name="delete"
                    size={22}
                  />
                }
                onPress={[Function]}
                radius={5}
                style={{}}
                type={3}
                width={-1}
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </ScrollView>
  <View
    style={
      {
        "backgroundColor": "#ffffffff",
        "elevation": 16,
        "flexDirection": "row",
        "justifyContent": "space-around",
        "paddingBottom": 20,
        "paddingHorizontal": 4,
        "paddingTop": 8,
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#0071e9"
      hidesWhenStopped={true}
      size="large"
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    />
  </View>
</RCTSafeAreaView>
`;
